# linkedin-scout

./: .env.example  .gitignore  README.md  TODO.md  design-doc.md  pyproject.toml  test_search_agent.py
src/linkedin_scout/: constants.py  types.py
src/linkedin_scout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/linkedin_scout/agents/: __init__.py  base.py  search_agent.py
src/linkedin_scout/browser/: __init__.py  company_navigator.py
src/linkedin_scout/cli/: main.py
src/linkedin_scout/export/: json_exporter.py
src/linkedin_scout/search/: __init__.py  company_search_controller.py
src/linkedin_scout/utils/: error_handling.py  logging_config.py  session_manager.py
