[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-scout"
version = "1.0.0"
description = "AI-powered LinkedIn contact discovery tool with local models"
authors = [
    {name = "Christopher Morrison", email = "chris@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["linkedin", "contacts", "prospecting", "automation", "ai", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "ollama>=0.2.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
    "aiosqlite>=0.19.0",
    "asyncio-throttle>=1.0.0",
    "fake-useragent>=1.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0"
]

[project.scripts]
linkedin-scout = "linkedin_scout.cli.main:app"

[project.urls]
Homepage = "https://github.com/username/linkedin-scout"
Repository = "https://github.com/username/linkedin-scout"
Issues = "https://github.com/username/linkedin-scout/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true